--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mini-css-extract-plugin": "^2.7.5",
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.1.0",
+    "robotstxt-webpack-plugin": "^8.0.0",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.0",
     "webpack": "^5.76.2",
