--- a/package.json
+++ b/package.json
@@ -8,28 +8,22 @@
     "dev": "webpack serve --mode development"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/core": "^7.22.6",
+    "@babel/preset-env": "^7.22.6",
     "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
-    "file-loader": "^6.2.0",
-    "glob": "^9.3.0",
+    "css-loader": "^6.8.1",
     "html-bundler-webpack-plugin": "^1.8.0",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.5",
     "postcss-load-config": "^4.0.1",
-    "postcss-loader": "^7.1.0",
+    "postcss-loader": "^7.3.3",
     "robotstxt-webpack-plugin": "^8.0.0",
-    "sass": "^1.59.3",
-    "sass-loader": "^13.2.0",
-    "webpack": "^5.76.2",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.0"
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "remove": "^0.1.5",
-    "style-loader": "^3.3.2"
+    "remove": "^0.1.5"
   }
 }
